# happstack-authenticate

./: .gitignore  .travis.yml  README.md  default.nix  happstack-authenticate.cabal  shell.nix
.github/workflows/: haskell-ci.yml
Happstack/Authenticate/: Controller.hs  Core.hs  Route.hs  URL.hs
Happstack/Authenticate/OpenId/: Controllers.hs  Core.hs  Dance.hs  Partials.hs  PartialsURL.hs  Route.hs  URL.hs
Happstack/Authenticate/Password/: Controllers.hs  Core.hs  Forms.hs  Partials.hs  PartialsURL.hs  Route.hs  URL.hs
demo/: LICENSE  Main.hs  happstack-authenticate-demo.cabal
happstack-authenticate-client/: HappstackAuthenticateClient.hs
messages/core/: en.msg
messages/openid/error/: en.msg
messages/openid/partials/: en.msg
messages/password/: en.msg
messages/password/error/: en.msg
messages/password/partials/: en.msg
src/Happstack/Authenticate/: Client.hs  Controller.hs  Core.hs  Handlers.hs  Route.hs  URL.hs
src/Happstack/Authenticate/OpenId/: Controllers.hs  Partials.hs  PartialsURL.hs  Route.hs
src/Happstack/Authenticate/Password/: Controllers.hs  Core.hs  Handlers.hs  Partials.hs  PartialsURL.hs  Route.hs  URL.hs
